@@ -1,6 +1,9 @@
 Revision history for exact
 
 {{$NEXT}}
+        - Add inheritance capability
+        - Add monkey_patch, add_isa, no_parent, and late_parent methods
+        - Remove autoclean method
 
 1.09      2019-08-22 16:20:27-07:00 America/Los_Angeles
         - Changed to use "-" prepending flags for compile check w00t
